--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-https://designerpremium.com.br/
-TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DESSE LINK COM AS IMAGENS QUE TEM NELE :
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -41,76 +38,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
   ======================================================== -->
 </head>
 
-<style>
-  html {
-    scroll-behavior: smooth;
-  }
 
-  /* Toast Notification */
-  .toast-container {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 9999;
-  }
-
-  .custom-toast {
-    background: #1a1a1a;
-    color: #fff;
-    padding: 15px 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    border-left: 4px solid #ffc107;
-    min-width: 300px;
-    animation: slideIn 0.3s ease-out;
-  }
-
-  .custom-toast.hide {
-    animation: slideOut 0.3s ease-out forwards;
-  }
-
-  @keyframes slideIn {
-    from {
-      transform: translateX(400px);
-      opacity: 0;
-    }
-
-    to {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes slideOut {
-    from {
-      transform: translateX(0);
-      opacity: 1;
-    }
-
-    to {
-      transform: translateX(400px);
-      opacity: 0;
-    }
-  }
-
-  .toast-header-custom {
-    display: flex;
-    align-items: center;
-    margin-bottom: 8px;
-    font-weight: 600;
-    color: #ffc107;
-  }
-
-  .toast-header-custom i {
-    margin-right: 8px;
-    font-size: 1.2rem;
-  }
-
-  .toast-body-custom {
-    font-size: 0.9rem;
-    line-height: 1.4;
-  }
-</style>
 
 
 <body class="index-page">
@@ -652,7 +580,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
         <!-- Design Gráfico -->
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-1.jpg" class="img-fluid" alt="Flyer de Evento">
+            <img src="assets/img/portfolio/evento CULTO UMDAERJ.png" class="img-fluid" alt="Flyer de Evento">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -664,7 +592,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-2.jpg" class="img-fluid" alt="Flyer de Evento">
+            <img src="assets/img/portfolio/unificadas.jpg" class="img-fluid" alt="Flyer de Evento">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -676,7 +604,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-3.jpg" class="img-fluid" alt="Flyer de Evento">
+            <img src="assets/img/portfolio/igreja.jpg" class="img-fluid" alt="Flyer de Evento">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -688,7 +616,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-4.jpg" class="img-fluid" alt="Flyer de Evento">
+            <img src="assets/img/portfolio/eventos CULTO FESTIVO DE SENHORAS.jpg" class="img-fluid" alt="Flyer de Evento">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -701,7 +629,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
         <!-- Social Media -->
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/social-1.jpg" class="img-fluid" alt="Post Criativo">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO_01.jpg" class="img-fluid" alt="Post Criativo">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Social Media</span>
@@ -713,7 +641,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/social-2.jpg" class="img-fluid" alt="Post Criativo">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO_02.jpg" class="img-fluid" alt="Post Criativo">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Social Media</span>
@@ -725,7 +653,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/social-3.jpg" class="img-fluid" alt="Post Criativo">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO-MICAELE_03.jpg" class="img-fluid" alt="Post Criativo">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Social Media</span>
@@ -737,7 +665,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/social-4.jpg" class="img-fluid" alt="Post Criativo">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO-MICAELE_02.jpg" class="img-fluid" alt="Post Criativo">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Social Media</span>
@@ -775,7 +703,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
         <!-- Mais Design Gráfico -->
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-5.jpg" class="img-fluid" alt="Identidade Visual">
+            <img src="assets/img/portfolio/strong righ.jpg" class="img-fluid" alt="Identidade Visual">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -787,7 +715,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-6.jpg" class="img-fluid" alt="Identidade Visual">
+            <img src="assets/img/portfolio/strong logo.webp" class="img-fluid" alt="Identidade Visual">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -799,7 +727,7 @@ TENHO ESSE HTML QUE CRIEI, E QUERIA QUE VOCE MUDASSE PARA QUE FICASSE IGUAL O DE
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-7.jpg" class="img-fluid" alt="Identidade Visual">
+            <img src="assets/img/portfolio/strong left.jpg" class="img-fluid" alt="Identidade Visual">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
