Task: mudanças necessarias para a landingPageCNL

--- a/index.html
+++ b/index.html
@@ -739,7 +739,29 @@
 
         <div class="portfolio-item">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/design-8.jpg" class="img-fluid" alt="Identidade Visual">
+            <img src="assets/img/portfolio/veloz left.png" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/logo veloz.webp" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/veloz rigth.png" class="img-fluid" alt="Identidade Visual">
             <div class="portfolio-info">
               <div class="content">
                 <span class="category">Design Gráfico</span>
@@ -749,6 +771,201 @@
           </div>
         </div>
 
+        <!-- Mais Social Media -->
+         <!-- Design Gráfico -->
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/evento CULTO UMDAERJ.png" class="img-fluid" alt="Flyer de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Flyer de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/unificadas.jpg" class="img-fluid" alt="Flyer de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Flyer de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/igreja.jpg" class="img-fluid" alt="Flyer de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Flyer de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/eventos CULTO FESTIVO DE SENHORAS.jpg" class="img-fluid" alt="Flyer de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Flyer de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Social Media -->
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO_01.jpg" class="img-fluid" alt="Post Criativo">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Social Media</span>
+                <h4>Post Criativo</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO_02.jpg" class="img-fluid" alt="Post Criativo">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Social Media</span>
+                <h4>Post Criativo</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO-MICAELE_03.jpg" class="img-fluid" alt="Post Criativo">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Social Media</span>
+                <h4>Post Criativo</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/CARD-APRESENTAÇÃO-MICAELE_02.jpg" class="img-fluid" alt="Post Criativo">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Social Media</span>
+                <h4>Post Criativo</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Eventos -->
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/eventos-1.jpg" class="img-fluid" alt="Arte de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Eventos</span>
+                <h4>Arte de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/eventos-2.jpg" class="img-fluid" alt="Arte de Evento">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Eventos</span>
+                <h4>Arte de Evento</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Mais Design Gráfico -->
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/strong righ.jpg" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/strong logo.webp" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/strong left.jpg" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/veloz left.png" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/logo veloz.webp" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-wrap">
+           <img src="assets/img/portfolio/veloz rigth.png" class="img-fluid" alt="Identidade Visual">
+            <div class="portfolio-info">
+              <div class="content">
+                <span class="category">Design Gráfico</span>
+                <h4>Identidade Visual</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </div>
